# secimport

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_INSTRUCTIONS.md  CONTRIBUTING.md  README.md  package-lock.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new_connector.md
examples/: enrichment_pipeline.py  gap_analysis.py
src/secimport/: __init__.py  plugins.py  runner.py
src/secimport/cli/: __init__.py  main.py
src/secimport/config/: __init__.py  loader.py
src/secimport/connectors/: __init__.py  base.py  pagination.py
src/secimport/connectors/cloud/: __init__.py  aws.py  azure_cloud.py  base.py  gcp.py
src/secimport/connectors/cmdb/: __init__.py  base.py  bmc.py  servicenow.py
src/secimport/connectors/directory/: __init__.py  active_directory.py  azure_ad.py  base.py
src/secimport/connectors/edr/: __init__.py  base.py  carbon_black.py  crowdstrike_edr.py  defender.py  sentinelone.py  symantec.py  trellix.py  trend_micro.py
src/secimport/connectors/ipam/: __init__.py  base.py  infoblox.py  netbox.py  solarwinds.py
src/secimport/connectors/ndr/: __init__.py  base.py  darktrace.py  extrahop.py  vectra.py
src/secimport/connectors/scanners/: __init__.py  base.py  crowdstrike.py  nessus.py  openvas.py  qualys.py  rapid7.py  tenable.py
src/secimport/connectors/siem/: __init__.py  base.py  qradar.py  sentinel.py  splunk.py
src/secimport/connectors/xdr/: __init__.py  base.py  cortex_xdr.py  vision_one.py
src/secimport/contrib/: __init__.py  connector_template.py  parser_template.py
src/secimport/detectors/: __init__.py  auto_detect.py
src/secimport/enrichment/: __init__.py  correlator.py  models.py  scoring.py
src/secimport/models/: __init__.py  base.py
src/secimport/normalizers/: __init__.py  hostname.py  severity.py
src/secimport/outputs/: __init__.py  base.py  csv_output.py  json_output.py  stdout_output.py  webhook_output.py
src/secimport/parsers/: __init__.py  base.py
src/secimport/parsers/assets/: __init__.py  csv_generic.py  servicenow.py
src/secimport/parsers/owners/: __init__.py  csv_generic.py  ipam.py
src/secimport/parsers/vulnerabilities/: __init__.py  crowdstrike.py  generic.py  nessus.py  openvas.py  qualys.py  rapid7.py  tenable.py
tests/: conftest.py  test_cli.py  test_config.py  test_connectors.py  test_correlator.py  test_edr_connectors.py  test_enrichment_models.py  test_hostname_normalizer.py  test_models.py  test_ndr_connectors.py  test_normalizers.py  test_outputs.py  test_parsers.py  test_scoring.py  test_siem_connectors.py  test_xdr_connectors.py
